--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,20 @@
 name = "postmark-models"
 version = "0.1.0"
 description = "Postmark Pydantic models"
-authors = [
-    {name = "Valentin Kivachuk Burda",email = "vk18496@gmail.com"}
-]
-license = {text = "GPLv3"}
+authors = [{ name = "Valentin Kivachuk Burda", email = "vk18496@gmail.com" }]
+license = { text = "GPLv3" }
 readme = "README.md"
-requires-python = ">=3.8"
-dependencies = [
-    "pydantic (>=2.11.4,<3.0.0)"
-]
 
+
+[tool.poetry.dependencies]
+python = ">=3.9"
+pydantic = "^2.11.4"
+email-validator = "^2.2.0"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+pytest-examples = "^0.0.18"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
