--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,6 +14,8 @@ jobs:
         uses: code-specialist/pypi-poetry-publish@v1
         with:
           BRANCH: main
+          POETRY_VERSION: 2.0.1
+          POETRY_CORE_VERSION: 2.0.1
           PUBLISH_REGISTRY: "https://test.pypi.org/simple/"
           PACKAGE_DIRECTORY: "./postmark_models/"
           PYTHON_VERSION: "3.10"
