FIX pypi test url

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,11 +1,8 @@
 name: Build and publish python package
 
-# on:
-#   release:
-#     types: [ published ]
-
-on: [push, fork]
-
+on:
+  release:
+    types: [ published ]
 
 jobs:
   publish-service-client-package:
